# synaptics-06cb-0078-driver

./: README.md  meson.build  synaptics_0078.c  synaptics_0078_data.c  test_capture.c
